Added extended serializers and extended_serializers param, updated swagger doc.
