# services/search/specification.swagger.yaml
@@ -99,6 +99,13 @@ components:
         type: integer
         example: 5
         default: 5
+    extended_serializers_param:
+      name: extended_serializers
+      in: query:
+      description: If set to true extends the number of fields to be serialized.
+      schema:
+        type: boolean
+        default: false
     type_param:
       name: type
       in: query
@@ -158,6 +165,7 @@ paths:
         - $ref: "#/components/parameters/language_param"
         - $ref: "#/components/parameters/use_trigram_param"
         - $ref: "#/components/parameters/order_units_by_num_services_param"
+        - $ref: "#/components/parameters/extended_serializers_param"
         - $ref: "#/components/parameters/sql_query_limit_param"
         - $ref: "#/components/parameters/unit_limit_param"
         - $ref: "#/components/parameters/service_limit_param"
